--- a/results/log.html
+++ b/results/log.html
@@ -2073,31 +2073,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,27],[[4,5,6,0,[],[1,21,5],[[7,8,9,0,[],[1,22,3],[],[[10,0,0,[],[1,23,2],[[0,11,12,0,13,14,0,0,[1,24,0],[]],[0,11,12,0,13,15,0,0,[1,24,0],[]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,25737],[[4,5,6,0,[],[1,20,25716],[[7,8,9,0,[],[1,21,25713],[],[[7,0,0,[],[1,78,25654],[[0,10,11,0,0,12,0,0,[1,79,19889],[[0,13,14,0,15,16,0,0,[1,80,19862],[[80,2,17]]],[0,18,14,0,19,0,0,0,[1,19943,24],[]]]],[0,20,11,0,0,21,0,0,[1,19968,99],[[0,22,14,0,23,24,0,0,[1,19968,98],[[19969,2,25]]]]],[0,26,11,0,0,27,0,0,[1,20067,38],[[0,22,14,0,23,28,0,0,[1,20067,37],[[20067,2,29]]]]],[0,30,11,0,0,0,0,0,[1,20104,37],[[0,31,14,0,32,33,0,0,[1,20105,36],[[20105,2,34]]]]],[0,35,36,0,37,38,0,0,[1,20141,3008],[[23144,2,39]]],[0,40,11,0,0,0,0,0,[1,23149,2481],[[0,41,14,0,42,43,0,0,[1,23150,2480],[[25630,2,44]]]]],[0,45,11,0,0,0,0,0,[1,25631,101],[[0,46,14,0,47,0,0,0,[1,25631,100],[]]]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*TaggingRobot","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TaggingRobot.robot","*../TestCases/TaggingRobot.robot","*TC2 Login Test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is user login test","*user login test is over"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*LoginTest","*/Users/amit/IdeaProjects/PythonProject1/TestCases/LoginTest.robot","*../TestCases/LoginTest.robot","*Open My Browser","*LoginKeywords","*${SiteUrl}    ${Browser}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${SiteUrl}    ${Broswer}","*Opening browser 'headlesschrome' to base url '<a href=\"https://demo.guru99.com/test/newtours/index.php\">https://demo.guru99.com/test/newtours/index.php\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Enter UserName","*${user}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${txt_loginUserName}    ${username}","*Typing text 'tutorial' into text field 'name:userName'.","*Enter Password","*${pwd}","*${txt_loginPassword}    ${password}","*Typing text 'tutorial' into text field 'name:password'.","*Click SignIn","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${btn_signIn}","*Clicking button '<a href=\"xpath://input[@name='submit\">xpath://input[@name='submit\x3c/a>']'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3","*Slept 3 seconds.","*Verify Successful Login","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Login: Mercury Tours","*Page title is 'Login: Mercury Tours'.","*Close My Browsers","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.TaggingRobot","name":"TaggingRobot","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:26","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:26","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.LoginTest","name":"LoginTest","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1766559120353;
+window.output["baseMillis"] = 1766642171295;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28;
+window.output["generated"] = 25740;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
