--- a/results/report.html
+++ b/results/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,27],[[4,5,6,0,[],[1,21,5],[[7,8,9,0,[],[1,22,3],[],[[10,0,0,[],[1,23,2],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,25737],[[4,5,6,0,[],[1,20,25716],[[7,8,9,0,[],[1,21,25713],[],[[7,0,0,[],[1,78,25654],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*TaggingRobot","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TaggingRobot.robot","*../TestCases/TaggingRobot.robot","*TC2 Login Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*LoginTest","*/Users/amit/IdeaProjects/PythonProject1/TestCases/LoginTest.robot","*../TestCases/LoginTest.robot"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.TaggingRobot","name":"TaggingRobot","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:26","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:26","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.LoginTest","name":"LoginTest","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1766559120353;
+window.output["baseMillis"] = 1766642171295;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28;
+window.output["generated"] = 25740;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
